# h3forge

./: README.md  pyproject.toml
envineq/: __init__.py
envineq/download/: __init__.py
envineq/download/ndvi/: __init__.py  sentinel2.py
envineq/download/sentinel2/: __init__.py  sentinel2.py
envineq/preprocess/: __init__.py
envineq/utils/: __init__.py
h3forge/: __init__.py
h3forge/download/: __init__.py
h3forge/features/: __init__.py  h3_aggregation.py  vector_to_h3.py
h3forge/preprocess/: raster_to_vector.py
notebooks/pystac-planetary_computer/: belg.csv  catalogs.ipynb  globaldem-planetarycomputer-pystac.ipynb  ms_buildings.ipynb  sentinel2.ipynb  sentinel5p-planetarycomputer-pystac.ipynb  sentinel5p.ipynb
scripts/: run_pipeline.py
