[project]
name = "envineq"
version = "0.1.0"
description = ""
authors = [
    {name = "Jerónimo Luza",email = "jero.luza@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "stackstac (>=0.5.1,<0.6.0)",
    "pystac-client (>=0.8.6,<0.9.0)",
    "geocube (>=0.7.1,<0.8.0)",
    "h3 (>=4.2.2,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
