[project]
name = "h3forge"
version = "0.1.0"
description = ""
authors = [
    {name = "Jerónimo Luza",email = "jero.luza@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "pystac-client (>=0.8.6,<0.9.0)",
    "geocube (>=0.7.1,<0.8.0)",
    "h3 (>=4.2.2,<5.0.0)",
    "odc-stac (>=0.4.0,<0.5.0)",
    "dask[distritubed] (>=2025.5.1,<2026.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "leaflet (>=0.0.3,<0.0.4)",
    "planetary-computer (>=1.0.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
